fix font family for placeholder to increase visibility

--- a/public/styles/site/contact.less
+++ b/public/styles/site/contact.less
@@ -17,6 +17,7 @@
   color: @red;
 }
 .form-control {
+  font-family: Arial, sans-serif;
   color: @black !important;
 }
 .form-control::-webkit-input-placeholder  {
